--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,29 @@
   color: rgba(0, 0, 0, 0.81);
 }
 /* Our Featured  */
+body {
+  background-color: #fafafa !important;
+}
+.bg_blue {
+  background: #2549d3;
+}
+.border_tran {
+  border-color: transparent;
+}
+.card_1:hover {
+  box-shadow: 24px 24px 48px rgba(0, 0, 0, 0.05);
+}
+
+.card_1 {
+  /* transition: all 300ms ease-in; */
+  border-radius: 0px 39.7214px;
+}
+.border_radius_0_39 {
+  border-radius: 0px 39.7214px;
+}
+@media (min-width: 768px) {
+  .width_md_31 {
+    flex: 0 0 auto !important;
+    width: 31.5% !important;
+  }
+}
